# mini-leebee

./: Cargo.toml  README.md
.github/workflows/: unit_tests.yml
audio-engine/: Cargo.toml
audio-engine/src/: audio_buffer.rs  commands.rs  lib.rs  metrenome.rs  metronome.rs  plugin.rs  ports.rs  processor.rs  track.rs  transport.rs
jack-adapter/: Cargo.toml
jack-adapter/src/: lib.rs  ports.rs  processor.rs
mini-leebee/: Cargo.toml
mini-leebee-proto/: Cargo.toml  build.rs  mini_leebee.proto
mini-leebee-proto/src/: lib.rs
mini-leebee-state/: Cargo.toml
mini-leebee-state/src/: lib.rs
mini-leebee-ui/: Cargo.toml
mini-leebee-ui/src/: app.rs  args.rs  main.rs
mini-leebee/src/: app.rs  args.rs  grpc.rs  main.rs
