[package]
name = "mini-leebee-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-engine = {path = "../audio-engine" }
jack-adapter = { path = "../jack-adapter" }
livi = "0.7"
log = "0.4"
pprof = { version = "0.11", features = ["flamegraph"] }
