[package]
name = "mini-leebee-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"]}
eframe = "0.20"
env_logger = "0.10"
log = "0.4"
mini-leebee-proto = { path = "../mini-leebee-proto" }
pollster = "0.2"
pprof = { version = "0.11", features = ["prost-codec"] }
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.8"