[package]
name = "mini-leebee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-engine = {path = "../audio-engine" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
jack-adapter = { path = "../jack-adapter" }
livi = "0.6"
log = "0.4"
