[package]
name = "mini-leebee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-engine = {path = "../audio-engine" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
jack-adapter = { path = "../jack-adapter" }
livi = "0.7"
log = "0.4"
mini-leebee-proto = { path = "../mini-leebee-proto" }
pprof = { version = "0.11", features = ["flamegraph", "prost-codec"] }
prost = "0.11"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.8"
tonic-reflection = "0.6"

[profile.release]
# Enable symbols for use in profiling.
debug = true
